--- a/index.ipynb
+++ b/index.ipynb
@@ -318,12 +318,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    if restaurant['rating'] + alternative['rating']:\n",
+    "    if restaurant['rating'] == alternative['rating']:\n",
     "        return True\n",
     "    return False"
    ]
