--- a/index.ipynb
+++ b/index.ipynb
@@ -488,7 +488,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if restaurant[ra]\n",
+    "    if restaurant['rating']\n",
     "    pass"
    ]
   },
