--- a/index.ipynb
+++ b/index.ipynb
@@ -489,6 +489,7 @@
    "source": [
     "def high_rating(restaurant, rating):\n",
     "    if restaurant['rating'] > rating:\n",
+    "        return \n",
     "    pass"
    ]
   },
