--- a/index.ipynb
+++ b/index.ipynb
@@ -489,7 +489,8 @@
    "source": [
     "def high_rating(restaurant, rating):\n",
     "    if restaurant['rating'] > rating:\n",
-    "        return \n",
+    "        return True\n",
+    "    \n",
     "    pass"
    ]
   },
