--- a/index.ipynb
+++ b/index.ipynb
@@ -490,8 +490,7 @@
     "def high_rating(restaurant, rating):\n",
     "    if restaurant['rating'] > rating:\n",
     "        return True\n",
-    "    return Fals\n",
-    "    pass"
+    "    return False\n"
    ]
   },
   {
